--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-# Logs
-logs
+/coverage/
+/docs/
+/node_modules/
 *.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Dependency directories
-node_modules
-
-# Custom
+package-lock.json
 code.zip
 env.json
-
