--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,7 @@ cache:
     - node_modules
 
 install: yarn
-
-script:
-  - yarn lint
-  - make test
-
+script: yarn lint && yarn test
 before_deploy: rm -rf *rc.js
 
 deploy:
